
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:rowCount="7"
    tools:context=".GridLayoutActivity" >

    <Button
        android:id="@+id/backProgramButton"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="6"
        android:text="@string/disconectBT" />
	
    <TextView
        android:id="@+id/textViewMenu2"
        android:layout_width="fill_parent"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="0"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/menuClockButton"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="1"
        android:text="@string/menu_clock" />
    
    <Button
        android:id="@+id/program1Button"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="2"
        android:text="@string/program1" />
    <Button
        android:id="@+id/program2Button"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="3"
        android:text="@string/program2" />
    <Button
        android:id="@+id/program3Button"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="4"
        android:text="@string/program3" />
    <Button
        android:id="@+id/program4Button"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="5"
        android:text="@string/program4" />

</GridLayout>