
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:rowCount="4"
    tools:context=".GridLayoutActivity" >

    <Button
        android:id="@+id/backProgram2Button"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="3"
        android:text="@string/back" />
	
    <TextView
        android:id="@+id/textViewMenu3"
        android:layout_width="fill_parent"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="0"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/programTimeButton"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="1"
        android:text="@string/define_program_time" />
    
    <Button
        android:id="@+id/pumpDosageButton"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="2"
        android:text="@string/dosage_pump" />

</GridLayout>